Modificação da animação do lowercaseletter. Somente a primeira imagem e a última possui a animação de translation e resize.
Iago